# verbsmarks

./: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  completion_queue_manager.cc  completion_queue_manager.h  connection_coordinator.cc  connection_coordinator.h  connection_coordinator.proto  ibverbs_utils.cc  ibverbs_utils.h  load_generator.cc  load_generator.h  memory_manager.cc  memory_manager.h  queue_pair.cc  queue_pair.h  special_traffic_generator.cc  special_traffic_generator.h  throughput_computer.cc  throughput_computer.h  traffic_generator.cc  traffic_generator.h  traffic_pattern_translator.cc  traffic_pattern_translator.h  utils.cc  utils.h  verbsmarks.proto  verbsmarks_binary.cc  verbsmarks_binary.h  verbsmarks_binary_flags.cc  verbsmarks_binary_flags.h  verbsmarks_follower.cc  verbsmarks_follower.h  verbsmarks_leader.cc  verbsmarks_leader.h  verbsmarks_leader_service.cc  verbsmarks_leader_service.h  verbsmarks_main.cc
docs/: verbsmarks.md
examples/bandwidth_sweep/: bandwidth_base_config.textpb  bandwidth_bidi_base_config.textpb  sweep_bandwidth_bidi_over_msg_size.textpb  sweep_bandwidth_over_msg_size.textpb
examples/incast_outcast/: incast_5to1_config.textpb  outcast_5to1_config.textpb
examples/latency_sweep/: latency_base_config.textpb  sweep_closedloop_latency_over_msg_size.textpb  sweep_latency_over_qp_count.textpb  sweep_openloop_latency_over_msg_size.textpb
examples/mixed_ops/: mixed_mode_config.textpb  mixed_op_sizes_config.textpb  mixed_op_types_config.textpb
examples/pingpong_sweep/: pingpong_base_config.textpb  sweep_pingpong_over_msg_size.textpb
examples/uniform_random/: alltoall_uniform_random_config.textpb  onetoall_uniform_random_config.textpb  uniform_random_config.textpb
tools/: BUILD  config_utils.cc  config_utils.h  experiment_config.proto  experiment_host.proto  experiment_sweep_parameter_util.cc  experiment_sweep_parameter_util.h  experiment_sweep_parameter_util_test.cc  simple_sweep_main.cc
